--- a/app2/src/main/AndroidManifest.xml
+++ b/app2/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.lis.ipc_module">
+    package="com.lis.app2">
 
     <application
         android:allowBackup="true"
@@ -16,9 +16,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".GpsService" android:process=":gps"/>
-        <service android:name="com.lis.ipc.IPCService$IPCService0" android:process=":gps"
-            android:exported="true"/>
     </application>
 
 </manifest>
